...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/new_event_picture"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/common_google_signin_btn_text_dark_default"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/newevent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Habit:" />

    <Spinner
        android:id="@+id/habit_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

...
        android:id="@+id/textView14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Comment:" />

    <EditText
        android:id="@+id/new_event_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="" />

...
            android:layout_weight="1"
            android:text="May require permission" />

    </LinearLayout>

    <Button
        android:id="@+id/create_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Create" />

</LinearLayout>
