<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2017 Yongjia Huang, Dichong Song, Mingwei Li, Donglin Han, Long Ma,CMPUT301F17T25 CMPUT301, University of Alberta, All Rights Reserved.
  ~ You may use distribut, or modify this code under terms and conditions of the ode of Student Behavior at University of Alberta
  ~ You may find a copy of the license in this project. Otherwise please contact jajayongjia@gmail.com
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/eventType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="User"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/eventComment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="25dp"
        android:paddingLeft="30dp"/>

    <ImageView
        android:id="@+id/eventImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/ic_launcher"
        android:paddingLeft="30dp"/>

    <TextView
        android:id="@+id/eventDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="10dp"
        android:paddingLeft="30dp"/>
</LinearLayout>