...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ca.ualberta.cs.opgoaltracker.activity.HabitEventFragment">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/new_event"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:clickable="true"
...
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/ic_add_white_24dp" />

    <ListView
        android:id="@+id/list_event"
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
...
